performance_and_scale_evaluation/phase1/manifests/rhcl-kuadrant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuadrant-system
